@@ -15,8 +15,7 @@ public class OptionsWorldDisplay extends Display {
 				Settings.getEntry("sound"),
 				Settings.getEntry("autosave"),
 				new SelectEntry("Change Key Bindings", () -> Game.setDisplay(new KeyInputDisplay())),
-				Settings.getEntry("language"),
-				new SelectEntry("minicraft.display.skin", () -> Game.setDisplay(new SkinDisplay())))
+				Settings.getEntry("language"))
 			.setTitle("World Options")
 			.createMenu()
 		);
